@@ -59,7 +59,7 @@ import org.jamwiki.utils.WikiLogger;
 public class AnsiQueryHandler implements QueryHandler {
 
 	private static final WikiLogger logger = WikiLogger.getLogger(AnsiQueryHandler.class.getName());
-	protected static final String SQL_PROPERTY_FILE_NAME = "sql.ansi.properties";
+	protected static final String SQL_PROPERTY_FILE_NAME = "sql/sql.ansi.properties";
 
 	protected static String STATEMENT_CONNECTION_VALIDATION_QUERY = null;
 	protected static String STATEMENT_CREATE_AUTHORITIES_TABLE = null;
