@@ -33,7 +33,7 @@ import org.jamwiki.utils.WikiLogger;
 public class DB2QueryHandler extends AnsiQueryHandler {
 
 	private static final WikiLogger logger = WikiLogger.getLogger(DB2QueryHandler.class.getName());
-	private static final String SQL_PROPERTY_FILE_NAME = "sql.db2.properties";
+	private static final String SQL_PROPERTY_FILE_NAME = "sql/sql.db2.properties";
 
 	/**
 	 *
