@@ -28,7 +28,7 @@ import org.jamwiki.utils.WikiLogger;
 public class H2QueryHandler extends AnsiQueryHandler {
 
 	private static final WikiLogger logger = WikiLogger.getLogger(H2QueryHandler.class.getName());
-	private static final String SQL_PROPERTY_FILE_NAME = "sql.h2.properties";
+	private static final String SQL_PROPERTY_FILE_NAME = "sql/sql.h2.properties";
 
 	/**
 	 *
