@@ -28,7 +28,7 @@ import org.jamwiki.utils.WikiLogger;
 public class HSqlQueryHandler extends AnsiQueryHandler {
 
 	private static final WikiLogger logger = WikiLogger.getLogger(HSqlQueryHandler.class.getName());
-	private static final String SQL_PROPERTY_FILE_NAME = "sql.hsql.properties";
+	private static final String SQL_PROPERTY_FILE_NAME = "sql/sql.hsql.properties";
 
 	/**
 	 *
