@@ -36,7 +36,7 @@ import org.jamwiki.utils.WikiLogger;
 public class OracleQueryHandler extends AnsiQueryHandler {
 
 	private static final WikiLogger logger = WikiLogger.getLogger(OracleQueryHandler.class.getName());
-	private static final String SQL_PROPERTY_FILE_NAME = "sql.oracle.properties";
+	private static final String SQL_PROPERTY_FILE_NAME = "sql/sql.oracle.properties";
 
 	/**
 	 *
