@@ -28,7 +28,7 @@ import org.jamwiki.utils.WikiLogger;
 public class PostgresQueryHandler extends AnsiQueryHandler {
 
 	private static final WikiLogger logger = WikiLogger.getLogger(PostgresQueryHandler.class.getName());
-	private static final String SQL_PROPERTY_FILE_NAME = "sql.postgres.properties";
+	private static final String SQL_PROPERTY_FILE_NAME = "sql/sql.postgres.properties";
 
 	/**
 	 *
