@@ -17,10 +17,9 @@ STATEMENT_CREATE_GROUP_TABLE = \
       CONSTRAINT jam_u_group_name UNIQUE (group_name) \
     )
 # columns must specify "NULL" explicitly
-# use "CURRENT TIMESTAMP" instead of the more standard "CURRENT_TIMESTAMP"
 STATEMENT_CREATE_LOG_TABLE = \
     CREATE TABLE jam_log ( \
-      log_date TIMESTAMP NOT NULL DEFAULT CURRENT TIMESTAMP, \
+      log_date TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP, \
       virtual_wiki_id INTEGER NOT NULL, \
       wiki_user_id INTEGER NULL, \
       display_name VARCHAR(200) NOT NULL, \
@@ -35,14 +34,25 @@ STATEMENT_CREATE_LOG_TABLE = \
       CONSTRAINT jam_f_log_vwiki FOREIGN KEY (virtual_wiki_id) REFERENCES jam_virtual_wiki(virtual_wiki_id) \
     )
 # columns must specify "NULL" explicitly
-# use "CURRENT TIMESTAMP" instead of the more standard "CURRENT_TIMESTAMP"
+# removed CONSTRAINT jam_f_namesp_namesp FOREIGN KEY (main_namespace_id) REFERENCES jam_namespace(namespace_id)
+# as ASA will not allow foreign key constraint if the value is NULL
+# needs to be a CHECK constraint instead?     
+STATEMENT_CREATE_NAMESPACE_TABLE = \
+    CREATE TABLE jam_namespace ( \
+      namespace_id INTEGER NOT NULL, \
+      namespace VARCHAR(200) NOT NULL, \
+      main_namespace_id INTEGER NULL, \
+      CONSTRAINT jam_p_namesp PRIMARY KEY (namespace_id), \
+      CONSTRAINT jam_u_namesp_namesp UNIQUE (namespace) \
+    )
+# columns must specify "NULL" explicitly
 STATEMENT_CREATE_RECENT_CHANGE_TABLE = \
     CREATE TABLE jam_recent_change ( \
       topic_version_id INTEGER NULL, \
       previous_topic_version_id INTEGER NULL, \
       topic_id INTEGER NULL, \
       topic_name VARCHAR(200) NULL, \
-      change_date TIMESTAMP NOT NULL DEFAULT CURRENT TIMESTAMP, \
+      change_date TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP, \
       change_comment VARCHAR(200) NULL, \
       wiki_user_id INTEGER NULL, \
       display_name VARCHAR(200) NOT NULL, \
@@ -66,7 +76,9 @@ STATEMENT_CREATE_ROLE_TABLE = \
       CONSTRAINT jam_p_role PRIMARY KEY (role_name) \
     )
 # columns must specify "NULL" explicitly
-# remove the UNIQUE constraint for topic_name and virtual_wiki_id (why?)
+# remove the UNIQUE constraint for topic_name, virtual_wiki_id and delete_date 
+# as ASA will not allow foreign key constraint if the value is NULL
+# needs to be a CHECK constraint instead?     
 STATEMENT_CREATE_TOPIC_TABLE = \
     CREATE TABLE jam_topic ( \
       topic_id INTEGER NOT NULL, \
@@ -86,7 +98,6 @@ STATEMENT_CREATE_TOPIC_TABLE = \
       CONSTRAINT jam_f_topic_namesp FOREIGN KEY (namespace_id) REFERENCES jam_namespace(namespace_id) \
     )
 # columns must specify "NULL" explicitly
-# use "CURRENT TIMESTAMP" instead of the more standard "CURRENT_TIMESTAMP"
 STATEMENT_CREATE_TOPIC_VERSION_TABLE = \
     CREATE TABLE jam_topic_version ( \
       topic_version_id INTEGER NOT NULL, \
@@ -95,7 +106,7 @@ STATEMENT_CREATE_TOPIC_VERSION_TABLE = \
       version_content TEXT NULL, \
       wiki_user_id INTEGER NULL, \
       wiki_user_display VARCHAR(100) NOT NULL, \
-      edit_date TIMESTAMP NOT NULL DEFAULT CURRENT TIMESTAMP, \
+      edit_date TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP, \
       edit_type INTEGER NOT NULL, \
       previous_topic_version_id INTEGER NULL, \
       characters_changed INTEGER NULL, \
@@ -105,16 +116,16 @@ STATEMENT_CREATE_TOPIC_VERSION_TABLE = \
       CONSTRAINT jam_f_topicv_wuser FOREIGN KEY (wiki_user_id) REFERENCES jam_wiki_user(wiki_user_id), \
       CONSTRAINT jam_f_topicv_pver FOREIGN KEY (previous_topic_version_id) REFERENCES jam_topic_version(topic_version_id) \
     )
-# use "CURRENT TIMESTAMP" instead of the more standard "CURRENT_TIMESTAMP"
+# columns must specify "NULL" explicitly
 STATEMENT_CREATE_VIRTUAL_WIKI_TABLE = \
     CREATE TABLE jam_virtual_wiki ( \
       virtual_wiki_id INTEGER NOT NULL, \
       virtual_wiki_name VARCHAR(100) NOT NULL, \
-      default_topic_name VARCHAR(200), \
-      create_date TIMESTAMP NOT NULL DEFAULT CURRENT TIMESTAMP, \
-      logo_image_url VARCHAR(200), \
-      site_name VARCHAR(200), \
-      meta_description VARCHAR(500), \
+      default_topic_name VARCHAR(200) NULL, \
+      create_date TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP, \
+      logo_image_url VARCHAR(200) NULL, \
+      site_name VARCHAR(200) NULL, \
+      meta_description VARCHAR(500) NULL, \
       CONSTRAINT jam_p_vwiki PRIMARY KEY (virtual_wiki_id), \
       CONSTRAINT jam_u_vwiki_name UNIQUE (virtual_wiki_name) \
     )
@@ -148,7 +159,6 @@ STATEMENT_CREATE_WIKI_FILE_TABLE = \
       CONSTRAINT jam_u_file_topic UNIQUE (virtual_wiki_id, topic_id) \
     )
 # columns must specify "NULL" explicitly
-# use "CURRENT TIMESTAMP" instead of the more standard "CURRENT_TIMESTAMP"
 STATEMENT_CREATE_WIKI_FILE_VERSION_TABLE = \
     CREATE TABLE jam_file_version ( \
       file_version_id INTEGER NOT NULL, \
@@ -157,7 +167,7 @@ STATEMENT_CREATE_WIKI_FILE_VERSION_TABLE = \
       file_url VARCHAR(200) NOT NULL, \
       wiki_user_id INTEGER NULL, \
       wiki_user_display VARCHAR(100) NOT NULL, \
-      upload_date TIMESTAMP NOT NULL DEFAULT CURRENT TIMESTAMP, \
+      upload_date TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP, \
       mime_type VARCHAR(100) NOT NULL, \
       file_size INTEGER NOT NULL, \
       CONSTRAINT jam_p_file_ver PRIMARY KEY (file_version_id), \
@@ -166,15 +176,14 @@ STATEMENT_CREATE_WIKI_FILE_VERSION_TABLE = \
       CONSTRAINT jam_u_filev_url UNIQUE (file_url) \
     )
 # columns must specify "NULL" explicitly
-# use "CURRENT TIMESTAMP" instead of the more standard "CURRENT_TIMESTAMP"
 # login is a reserved word, so surround with quotation marks
 STATEMENT_CREATE_WIKI_USER_TABLE = \
     CREATE TABLE jam_wiki_user ( \
       wiki_user_id INTEGER NOT NULL, \
       "login" VARCHAR(100) NOT NULL, \
       display_name VARCHAR(100) NULL, \
-      create_date TIMESTAMP NOT NULL DEFAULT CURRENT TIMESTAMP, \
-      last_login_date TIMESTAMP NOT NULL DEFAULT CURRENT TIMESTAMP, \
+      create_date TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP, \
+      last_login_date TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP, \
       create_ip_address VARCHAR(39) NOT NULL, \
       last_login_ip_address VARCHAR(39) NOT NULL, \
       default_locale VARCHAR(8) NULL, \
@@ -186,7 +195,105 @@ STATEMENT_CREATE_WIKI_USER_TABLE = \
     )
 # login is a reserved word, so surround with quotation marks
 STATEMENT_CREATE_WIKI_USER_LOGIN_INDEX = \
-    CREATE UNIQUE INDEX jam_u_wuser_login on jam_wiki_user ("login") 
+    CREATE UNIQUE INDEX jam_u_wuser_loginlc on jam_wiki_user (lower("login") as login_lc)
+# login is a reserved word, so surround with quotation marks
+STATEMENT_INSERT_LOG_ITEMS_BY_TOPIC_VERSION_TYPE = \
+    INSERT INTO jam_log ( \
+      log_date, virtual_wiki_id, wiki_user_id, \
+      display_name, log_type, log_comment, log_params, \
+      topic_id, topic_version_id \
+    ) \
+    SELECT \
+      jam_topic_version.edit_date, jam_topic.virtual_wiki_id, \
+      jam_topic_version.wiki_user_id, \
+      coalesce(jam_wiki_user."login", jam_topic_version.wiki_user_display), \
+      ?, jam_topic_version.edit_comment, jam_topic.topic_name || ?, \
+      jam_topic.topic_id, jam_topic_version.topic_version_id \
+    FROM jam_topic, jam_topic_version \
+    LEFT OUTER JOIN jam_wiki_user ON ( \
+      jam_wiki_user.wiki_user_id = jam_topic_version.wiki_user_id \
+    ) \
+    WHERE jam_topic.topic_id = jam_topic_version.topic_id \
+    AND jam_topic.virtual_wiki_id = ? \
+    AND jam_topic_version.edit_type = ?
+# login is a reserved word, so surround with quotation marks
+STATEMENT_INSERT_LOG_ITEMS_IMPORT = \
+    INSERT INTO jam_log ( \
+      log_date, virtual_wiki_id, wiki_user_id, \
+      display_name, log_type, log_comment, log_params, \
+      topic_id, topic_version_id \
+    ) \
+    SELECT \
+      jam_topic_version.edit_date, jam_topic.virtual_wiki_id, \
+      jam_topic_version.wiki_user_id, \
+      coalesce(jam_wiki_user."login", jam_topic_version.wiki_user_display), \
+      ?, jam_topic_version.edit_comment, jam_topic.topic_name, \
+      jam_topic.topic_id, jam_topic_version.topic_version_id \
+    FROM jam_topic, jam_topic_version \
+    LEFT OUTER JOIN jam_wiki_user ON ( \
+      jam_wiki_user.wiki_user_id = jam_topic_version.wiki_user_id \
+    ) \
+    WHERE jam_topic.topic_id = jam_topic_version.topic_id \
+    AND jam_topic_version.edit_type = ? \
+    AND jam_topic.virtual_wiki_id = ? \
+    AND jam_topic_version.topic_version_id in ( \
+      select max(topic_version_id) from jam_topic_version \
+      where edit_type = ? \
+      group by topic_id \
+    )
+# login is a reserved word, so surround with quotation marks
+STATEMENT_INSERT_LOG_ITEMS_MOVE = \
+    INSERT INTO jam_log ( \
+      log_date, virtual_wiki_id, wiki_user_id, \
+      display_name, log_type, log_comment, log_params, \
+      topic_id, topic_version_id \
+    ) \
+    SELECT \
+      jam_topic_version.edit_date, jam_topic.virtual_wiki_id, \
+      jam_topic_version.wiki_user_id, \
+      coalesce(jam_wiki_user."login", jam_topic_version.wiki_user_display), \
+      ?, jam_topic_version.edit_comment, jam_topic.topic_name || '|' || jam_topic.redirect_to, \
+      jam_topic.topic_id, jam_topic_version.topic_version_id \
+    FROM jam_topic, jam_topic_version \
+    LEFT OUTER JOIN jam_wiki_user ON ( \
+      jam_wiki_user.wiki_user_id = jam_topic_version.wiki_user_id \
+    ) \
+    WHERE jam_topic.topic_id = jam_topic_version.topic_id \
+    AND jam_topic.virtual_wiki_id = ? \
+    AND jam_topic.redirect_to is not null \
+    AND jam_topic_version.edit_type = ?
+# login is a reserved word, so surround with quotation marks
+STATEMENT_INSERT_LOG_ITEMS_UPLOAD = \
+    INSERT INTO jam_log ( \
+      log_date, virtual_wiki_id, wiki_user_id, \
+      display_name, log_type, log_comment, log_params, \
+      topic_id, topic_version_id \
+    ) \
+    SELECT \
+      jam_topic_version.edit_date, jam_topic.virtual_wiki_id, \
+      jam_topic_version.wiki_user_id, \
+      coalesce(jam_wiki_user."login", jam_topic_version.wiki_user_display), \
+      ?, jam_topic_version.edit_comment, jam_topic.topic_name, \
+      jam_topic.topic_id, jam_topic_version.topic_version_id \
+    FROM jam_topic, jam_topic_version \
+    LEFT OUTER JOIN jam_wiki_user ON ( \
+      jam_wiki_user.wiki_user_id = jam_topic_version.wiki_user_id \
+    ) \
+    WHERE jam_topic.topic_id = jam_topic_version.topic_id \
+    AND jam_topic.virtual_wiki_id = ? \
+    AND jam_topic_version.edit_type = ? \
+    AND jam_topic.topic_type in (4, 6)
+# login is a reserved word, so surround with quotation marks
+STATEMENT_INSERT_LOG_ITEMS_USER = \
+    INSERT INTO jam_log ( \
+      log_date, virtual_wiki_id, wiki_user_id, \
+      display_name, log_type, log_comment, log_params, \
+      topic_id, topic_version_id \
+    ) \
+    SELECT \
+      create_date, ?, wiki_user_id, \
+      "login", ?, null, null, null, null \
+    FROM jam_wiki_user
 # login is a reserved word, so surround with quotation marks
 STATEMENT_INSERT_RECENT_CHANGES_VERSIONS = \
     INSERT INTO jam_recent_change ( \
@@ -216,6 +323,25 @@ STATEMENT_INSERT_RECENT_CHANGES_VERSIONS = \
       OR (jam_topic_version.edit_type = 8 AND jam_topic.current_version_id != jam_topic_version.topic_version_id) \
     )
 # login is a reserved word, so surround with quotation marks
+STATEMENT_INSERT_RECENT_CHANGES_LOGS = \
+    INSERT INTO jam_recent_change ( \
+      topic_version_id, topic_id, \
+      topic_name, change_date, wiki_user_id, display_name, \
+      edit_type, virtual_wiki_id, virtual_wiki_name, change_comment, \
+      previous_topic_version_id, characters_changed, log_type, log_params \
+    ) \
+    SELECT \
+      jam_log.topic_version_id, jam_log.topic_id, null, jam_log.log_date, \
+      jam_log.wiki_user_id, coalesce(jam_wiki_user."login", jam_log.display_name), \
+      null, jam_virtual_wiki.virtual_wiki_id, \
+      jam_virtual_wiki.virtual_wiki_name, jam_log.log_comment, \
+      null, null, jam_log.log_type, jam_log.log_params \
+    FROM jam_virtual_wiki, jam_log \
+    LEFT OUTER JOIN jam_wiki_user ON ( \
+      jam_wiki_user.wiki_user_id = jam_log.wiki_user_id \
+    ) \
+    WHERE jam_log.virtual_wiki_id = jam_virtual_wiki.virtual_wiki_id
+# login is a reserved word, so surround with quotation marks
 STATEMENT_INSERT_WIKI_USER = \
     insert into jam_wiki_user ( \
       wiki_user_id, "login", display_name, create_date, \
@@ -223,6 +349,15 @@ STATEMENT_INSERT_WIKI_USER = \
       default_locale, email, editor, signature \
     ) values ( \
       ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ? \
+    )
+# login is a reserved word, so surround with quotation marks
+STATEMENT_INSERT_WIKI_USER_AUTO_INCREMENT = \
+    insert into jam_wiki_user ( \
+      "login", display_name, create_date, \
+      last_login_date, create_ip_address, last_login_ip_address, \
+      default_locale, email, editor, signature \
+    ) values ( \
+      ?, ?, ?, ?, ?, ?, ?, ?, ?, ? \
     )
 # login is a reserved word, so surround with quotation marks
 STATEMENT_SELECT_AUTHORITIES_AUTHORITY = \
@@ -275,7 +410,7 @@ STATEMENT_SELECT_CATEGORIES = \
         SET @LIMIT = ? \
         SET @OFFSET = ? \
         SET @TOP = @LIMIT \
-        SET @COUNT = (select count(distinct jam_category.category_name) from jam_topic join jam_category on jam_topic.topic_id = jam_category.child_topic_id where jam_topic.virtual_wiki_id = @VWIKI_ID) \
+        SET @COUNT = (select count(*) from jam_topic join jam_category on jam_topic.topic_id = jam_category.child_topic_id where jam_topic.virtual_wiki_id = @VWIKI_ID group by jam_category.category_name, jam_category.sort_key) \
         IF (@OFFSET > @COUNT) SET @OFFSET = @COUNT \
         IF (@COUNT < @OFFSET + @LIMIT) SET @TOP = @COUNT - @OFFSET \
         SET @INNERCOUNT = @OFFSET + @LIMIT \
@@ -283,8 +418,8 @@ STATEMENT_SELECT_CATEGORIES = \
                    select top @TOP * from ( \
                       select distinct top @INNERCOUNT jam_category.category_name, jam_category.sort_key \
                       from jam_topic join jam_category on jam_topic.topic_id = jam_category.child_topic_id \
-                      where jam_topic.virtual_wiki_id = '+CONVERT(VARCHAR, @VWIKI_ID) \
-                      order by sort_key \
+                      where jam_topic.virtual_wiki_id = @VWIKI_ID \
+                      order by jam_category.sort_key \
                    ) a \
                    order by sort_key desc \
                  ) b \
@@ -395,7 +530,7 @@ STATEMENT_SELECT_TOPIC_BY_TYPE = \
         SET @LIMIT = ? \
         SET @OFFSET = ? \
         SET @TOP = @LIMIT \
-        SET @COUNT = (select count(*) from jam_topic where virtual_wiki_id = @VWIKI_ID and topic_type in (@TOPIC_TYPE1, @TOPIC_TYPE2) and namespace_id >= NAMESPACE_START and namespace_id <= NAMESPACE_END and delete_date is null) \
+        SET @COUNT = (select count(*) from jam_topic where virtual_wiki_id = @VWIKI_ID and topic_type in (@TOPIC_TYPE1, @TOPIC_TYPE2) and namespace_id >= @NAMESPACE_START and namespace_id <= @NAMESPACE_END and delete_date is null) \
         IF (@OFFSET > @COUNT) SET @OFFSET = @COUNT \
         IF (@COUNT < @OFFSET + @LIMIT) SET @TOP = @COUNT - @OFFSET \
         SET @INNERCOUNT = @OFFSET + @LIMIT \
@@ -407,13 +542,14 @@ STATEMENT_SELECT_TOPIC_BY_TYPE = \
                        and jam_topic.namespace_id >= @NAMESPACE_START \
                        and jam_topic.namespace_id <= @NAMESPACE_END \
                        and delete_date is null \
-                      order by topic_name \
+                      order by jam_topic.topic_name \
                    ) a \
                    order by topic_name desc \
                  ) b \
                   order by topic_name \
     END
 # limit and offset aren't supported, so find another way to return only a portion of the result set
+# login is a reserved word, so surround with quotation marks
 STATEMENT_SELECT_TOPIC_HISTORY = \
     BEGIN \
         DECLARE @COUNT int \
@@ -447,7 +583,7 @@ STATEMENT_SELECT_TOPIC_HISTORY = \
                 jam_topic_version.topic_version_id, jam_topic.topic_id, \
                 jam_topic.topic_name, jam_topic_version.edit_date as change_date, \
                 jam_topic_version.wiki_user_id, \
-                coalesce(jam_wiki_user.login, jam_topic_version.wiki_user_display) as display_name, \
+                coalesce(jam_wiki_user."login", jam_topic_version.wiki_user_display) as display_name, \
                 jam_topic_version.edit_type, jam_virtual_wiki.virtual_wiki_id, \
                 jam_virtual_wiki.virtual_wiki_name, jam_topic_version.edit_comment as change_comment, \
                 jam_topic_version.previous_topic_version_id, \
@@ -461,8 +597,8 @@ STATEMENT_SELECT_TOPIC_HISTORY = \
               AND jam_topic.topic_id = jam_topic_version.topic_id \
               AND jam_topic.virtual_wiki_id = jam_virtual_wiki.virtual_wiki_id \
               AND jam_topic.delete_date is null \
+              ) as jam_recent_change \
               order by change_date desc \
-            ) as jam_recent_change \
           ) a \
           order by change_date \
         ) b \
@@ -537,11 +673,11 @@ STATEMENT_SELECT_WATCHLIST_CHANGES = \
                         and jam_virtual_wiki.virtual_wiki_id = @VWIKI_ID \
                         and jam_watchlist.wiki_user_id = @USER_ID \
                         and (jam_topic.delete_date is null or jam_topic_version.edit_type = 5) \
-                        order by edit_date desc \
+                        order by change_date desc \
                       ) a \
-                      order by edit_date \
+                      order by change_date \
                     ) b \
-                    order by edit_date desc \
+                    order by change_date desc \
     END
 # limit and offset aren't supported, so find another way to return only a portion of the result set
 STATEMENT_SELECT_WIKI_USER_CHANGES_ANONYMOUS = \
@@ -580,11 +716,11 @@ STATEMENT_SELECT_WIKI_USER_CHANGES_ANONYMOUS = \
                         and jam_topic_version.wiki_user_display = @WIKI_USER \
                         and jam_topic_version.wiki_user_id is null \
                         and (jam_topic.delete_date is null or jam_topic_version.edit_type = 5) \
-                        order by edit_date desc \
+                        order by change_date desc \
                       ) a \
-                       order by edit_date \
+                       order by change_date \
                     ) b \
-                    order by edit_date desc \
+                    order by change_date desc \
     END
 # limit and offset aren't supported, so find another way to return only a portion of the result set
 # login is a reserved word, so surround with quotation marks
@@ -624,11 +760,11 @@ STATEMENT_SELECT_WIKI_USER_CHANGES_LOGIN = \
                         and jam_virtual_wiki.virtual_wiki_name = @WIKI_NAME \
                         and jam_wiki_user."login" = @WIKI_USER \
                         and (jam_topic.delete_date is null or jam_topic_version.edit_type = 5) \
-                        order by edit_date desc \
+                        order by change_date desc \
                       ) a \
-                      order by edit_date \
+                      order by change_date \
                     ) b \
-                    order by edit_date desc \
+                    order by change_date desc \
     END
 # login is a reserved word, so surround with quotation marks
 STATEMENT_SELECT_WIKI_USER_LOGIN = \
@@ -660,3 +796,21 @@ STATEMENT_SELECT_WIKI_USERS = \
                  ) b \
                  order by "login" \
     END
+UPGRADE_090_ADD_TOPIC_NAMESPACE_ID = \
+    alter table jam_topic add namespace_id INTEGER DEFAULT 0 NOT NULL
+UPGRADE_090_ADD_TOPIC_PAGE_NAME = \
+    alter table jam_topic add page_name VARCHAR(200) NULL
+UPGRADE_090_ADD_TOPIC_PAGE_NAME_LOWER = \
+    alter table jam_topic add page_name_lower VARCHAR(200) NULL
+UPGRADE_090_ADD_TOPIC_PAGE_NAME_LOWER_NOT_NULL_CONSTRAINT = \
+    alter table jam_topic alter page_name_lower VARCHAR(200) NOT NULL
+UPGRADE_090_ADD_TOPIC_PAGE_NAME_NOT_NULL_CONSTRAINT = \
+    alter table jam_topic alter page_name VARCHAR(200) NOT NULL
+UPGRADE_100_ADD_VIRTUAL_WIKI_LOGO_URL = \
+    alter table jam_virtual_wiki add logo_image_url VARCHAR(200) NULL
+UPGRADE_100_ADD_VIRTUAL_WIKI_SITE_NAME = \
+    alter table jam_virtual_wiki add site_name VARCHAR(200) NULL
+UPGRADE_100_ADD_VIRTUAL_WIKI_META_DESCRIPTION = \
+    alter table jam_virtual_wiki add meta_description VARCHAR(500) NULL
+UPGRADE_100_DROP_VIRTUAL_WIKI_DEFAULT_TOPIC_NOT_NULL = \
+    alter table jam_virtual_wiki alter default_topic_name VARCHAR(200) NULL
